<resources>
    <string name="app_name">YourBestDiary</string>
    <string name="banner_ad_app_id" translatable="false">ca-app-pub-9518936645258348~9000751532</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9518936645258348/9547546445</string>
    <string name="geo_api_key" translatable="false">AIzaSyBqIaX5gl6vGr0C5xZA29CKXoYyJPW2pxI</string>
    <string name="note_list_date_format" translatable="false">%1$s, %2$s</string>
    <string name="counter_format" translatable="false">%1$d/%2$d</string>
    <string name="sync_progress_format" translatable="false">%1$d%% %2$s</string>
    <string name="location_permission_request">
        Приложению требуется разрешение для определения прогноза погоды и местоположения вашей новой записи.
        Вы можете отключить прогноз погоды и определение местоположения, в настройках приложения.
    </string>
    <string name="storage_permission_request">
        Приложению требуется разрешение для доступа к картинкам на вашем устройве.
    </string>
    <string name="pin_recovery_email_subject">Восстановление пароля</string>
    <string name="pin_recovery_email_content">Ваш пароль: %s</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выйти</string>
    <string name="time">Время</string>
    <string name="save">Сохранить</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="back">Назад</string>
    <string name="microphone">Микрофон</string>
    <string name="email">Email</string>
    <string name="send">Отправить</string>
    <string name="done">Готово</string>
    <string name="undo">Отменить</string>
    <string name="redo">Повторить</string>
    <string name="add">Добавить</string>
    <string name="network_error">Нет интернет соединения</string>
    <string name="change_password">Сменить пароль</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="empty_password">Введите пароль</string>
    <string name="empty_email">Введите email</string>
    <string name="wrong_email_format">Некорректный email</string>
    <string name="choose_tags">Выберите теги</string>
    <string name="choose_category">Категория</string>
    <string name="choose_mood">Настроение</string>
    <string name="add_tag">Добавить тег</string>
    <string name="tag_name">Название тега</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="album">Альбом</string>
    <string name="click_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="search">Поиск</string>
    <string name="choose_all_notes">Выбрать все записи</string>
    <string name="settings">Настройки</string>
    <string name="image">Картинка</string>
    <string name="date">Дата</string>
    <string name="share">Поделиться</string>
    <string name="title">Загловок…</string>
    <string name="content">Остальное…</string>
    <string name="tags">Теги</string>
    <string name="categories">Категории</string>
    <string name="moods">Настроения</string>
    <string name="locations">Места</string>
    <string name="list">Лист</string>
    <string name="multi_selection">Множественный выбор</string>
    <string name="choose_all_images">Выбрать все картинки</string>
    <string name="no_mood">Нет настроения</string>
    <string name="add_image">Добавить картинку</string>
    <string name="no_category">Нет категории</string>
    <string name="category_name">Название</string>
    <string name="appearance">Внешний вид</string>
    <string name="background">Фон</string>
    <string name="text">Текст</string>
    <string name="load">Загрузка</string>
    <string name="note_background_summary">Цвет заднего плана записи</string>
    <string name="note_background_title">Цвет фона</string>
    <string name="note_text_background_summary">Цвет фона на котором пишется текст записи</string>
    <string name="note_text_background_title">Цвет поверхности с текстом</string>
    <string name="note_font_size_title">Размер шрифта</string>
    <string name="note_font_color_title">Цвет текста</string>
    <string name="note_font_color_summary">Цвет тегов и текста заметки</string>
    <string name="surface_font_color_title">Цвет надписей</string>
    <string name="surface_font_color_summary">Цвет даты, прогноза погоды и местоположения</string>
    <string name="all_notes_surface_font_color_title">Цвет надписей</string>
    <string name="all_notes_surface_font_color_summary">Применяется ко всем заметкам для которых не указан отдельно</string>
    <string name="primary_color_settings_summary">Основной цвет приложения</string>
    <string name="primary_color_settings_title">Первичный цвет</string>
    <string name="accent_color_settings_title">Вторичный цвет</string>
    <string name="accent_color_settings_summary">Цвет переключателей и курсора при наборе текста</string>
    <string name="all_notes_background_settings_summary">Применяется ко всем заметкам для которых не указан отдельно</string>
    <string name="all_notes_background_settings_title">Фон заметки</string>
    <string name="settings_theme_title">Цвета приложения</string>
    <string name="settings_note_title">Цвета заметок</string>
    <string name="all_notes_text_background_settings_summary">Применяется ко всем заметкам для которых не указан отдельно</string>
    <string name="all_notes_text_background_settings_title">Фон текста заметки</string>
    <string name="all_notes_text_size_settings_title">Размер шрифта</string>
    <string name="all_notes_text_color_settings_summary">Применяется ко всем заметкам для которых не указан отдельно</string>
    <string name="all_notes_text_color_settings_title">Цвет текста</string>
    <string name="settings_title_notes">Настройки заметок</string>
    <string name="settings_title_protection">Защита</string>
    <string name="weather_activation_settings_off">Включить проказ погоды</string>
    <string name="weather_activation_settings_on">Отключить показ погоды</string>
    <string name="weather_activation_settings_title">Погода</string>
    <string name="weather_units_settings_title">Единицы измерения погоды</string>
    <string name="mood_activation_settings_off">Включить проказ настроения</string>
    <string name="mood_activation_settings_on">Отключить показ настроения</string>
    <string name="mood_activation_settings_title">Настроение</string>
    <string name="map_activation_settings_off">Включить определение местонахождения</string>
    <string name="map_activation_settings_on">Отключить определение местонахождения</string>
    <string name="map_activation_settings_title">Местонахождение</string>
    <string name="security_key_settings_off">Включить защиту паролем</string>
    <string name="security_key_settings_title">Пароль</string>
    <string name="security_time_settings_title">Время до запроса пароля</string>
    <string name="fragment_registration_password">Пароль</string>
    <string name="fragment_registration_repeat_password">Повторите пароль</string>
    <string name="fragment_registration_sign_up">Регистрация</string>
    <string name="fragment_login_forgot">Не помню</string>
    <string name="fragment_login_sign_in">Войти</string>
    <string name="fragment_login_wrong_credential">Неверный email или пароль</string>
    <string name="fragment_auth_sign_up">Зарегистрироваться</string>
    <string name="fragment_registration_password_error">Пароли не совпадают</string>
    <string name="fragment_registration_error_email_exists">Email уже зарегистрирован</string>
    <string name="fragment_registration_error_short_password">Пароль слишком короткий</string>
    <string name="fragment_done_auth_done">Добро пожаловать!</string>
    <string name="fragment_done_email_sent">Письмо отправлено!</string>
    <string name="nav_header_main_sing_in">Войти в аккаунт</string>
    <string name="nav_header_main_anonymous">Аноним</string>
    <string name="nav_header_main_profile_description">Открыть настройки</string>
    <string name="nav_header_main_photos">Фото:</string>
    <string name="nav_header_main_button_sync">Синхронизация</string>
    <string name="nav_header_main_today">Сегодня:</string>
    <string name="nav_header_main_total">Всего:</string>
    <string name="sort_new_first">Сначала новые</string>
    <string name="sort_old_first">Сначала старые</string>
    <string name="notification_sync_title">Идет синхронизация…</string>
    <string name="notification_sync_content">Пожалуйста, не отключайтесь от сети</string>
    <string name="sync_done">Готово!</string>
    <string name="sync_profile_check">Проверка профиля</string>
    <string name="sync_notes">Загрузка записей</string>
    <string name="sync_appearance">Загрузка настроек</string>
    <string name="sync_categories">Загрузка категорий</string>
    <string name="sync_tags">Загрузка тегов</string>
    <string name="sync_images">Загрузка картинок</string>
    <string name="sync_cleanup">Завершение</string>
    <string name="sync_error_profile">Ошибка проверки профиля</string>
    <string name="sync_error_notes">Ошибка загрузки записей</string>
    <string name="sync_error_appearance">Ошибка загрузки настроек</string>
    <string name="sync_error_categories">Ошибка загрузки папок</string>
    <string name="sync_error_tags">Ошибка загрузки тегов</string>
    <string name="sync_error_note_tags">Ошибка связей тегов</string>
    <string name="sync_error_locations">Ошибка загрузки мест</string>
    <string name="sync_error_note_locations">Ошибка связей мест</string>
    <string name="sync_error_forecasts">Ошибка загрузки погоды</string>
    <string name="sync_error_images">Ошибка загрузки картинок</string>
    <string name="sync_error_cleanup">Ошибка очистки</string>
    <string name="sync_note_tags">Загрузка связей</string>
    <string name="sync_note_locations">Загрузка связей</string>
    <string name="sync_locations">Загрузка мест</string>
    <string name="sync_forecasts">Загрузка прогноза</string>
    <string name="sync_error">Ошибка!</string>
    <string name="fragment_menu_profile_about">О профиле</string>
    <string name="fragment_menu_profile_picture">Картинка профиля</string>
    <string name="fragment_sign_out_exit">Выйти из профиля?</string>
    <string name="fragment_password_new_password">Новый пароль</string>
    <string name="fragment_password_old_password">Старый пароль</string>
    <string name="fragment_password_enter_old_password">Введите старый пароль</string>
    <string name="fragment_password_enter_new_password">Введите новый пароль</string>
    <string name="fragment_password_success_text">Пароль успешно изменен!</string>
    <string name="fragment_about_profile_sync_non">отсутствует</string>
    <string name="fragment_about_profile_yup">есть</string>
    <string name="fragment_about_profile_sign_in_date">Дата регистрации:</string>
    <string name="fragment_about_profile_premium">Премиум:</string>
    <string name="fragment_about_profile_last_sync">Последняя синхр.:</string>
    <string name="fragment_gallery_drag_hint">Долгим нажатием можно перемещать и удалять картинки!</string>
    <string name="gallery_list_empty_state_add_images">Добавить картинки</string>
    <string name="gallery_list_empty_state_message_part_1">Список картинок пуст?</string>
    <string name="gallery_list_empty_state_message_part_2">Ничего страшного! Добавьте новые, это просто!</string>
    <string name="fragment_backup_email_message">Введите email\nдля восстановления пароля</string>
    <string name="pref_daily_image_load_off_state">Включить загрузку дейли картинки</string>
    <string name="pref_daily_image_load_on_state">Отключить загрузку дейли картинки</string>
    <string name="pref_daily_image_load_title">Загрузка картинки</string>
    <string name="pref_daily_image_category_title">Категория картинки</string>
</resources>