<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="1"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_image"
        android:icon="@drawable/ic_image_white"
        android:orderInCategory="2"
        android:title="@string/image"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_date"
        android:orderInCategory="3"
        android:title="@string/date"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_time"
        android:orderInCategory="4"
        android:title="@string/time"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_image_white"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>