<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/menu_statistics"
        android:icon="@drawable/ic_chart"
        android:title="@string/statistics"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_image"
        android:title="@string/image"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort_new_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_all_notes"
        android:title="@string/choose_all_notes"
        app:showAsAction="never" />

</menu>