<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/layout_tags_header"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_weight="0"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_tags"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:imeOptions="flagNoExtractUi|actionSearch"
            android:layout_gravity="end|center_vertical"
            app:closeIcon="@drawable/ic_close"
            android:layoutDirection="rtl"
            android:maxWidth="10000dp"
            app:queryHint="@string/tag_name"
            app:searchHintIcon="@drawable/ic_search_grey"
            app:searchIcon="@drawable/ic_search" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_tags"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="vertical"
        tools:listitem="@layout/tags_list_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_tags_add"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:letterSpacing="0.0"
            android:text="@string/add_tag" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_tags_close"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.0"
            android:text="@string/close" />

    </LinearLayout>

</LinearLayout>